--- a/src/forex/ui/shared/styles/app.qss
+++ b/src/forex/ui/shared/styles/app.qss
@@ -235,6 +235,67 @@ QWidget[class="training_params"] QGroupBox::title {
     color: #cdd6e1;
 }
 
+QWidget[class="training_params"] {
+    background-color: #20252d;
+}
+
+QWidget[class="training_params"] QTabWidget::pane {
+    border: 1px solid #343c46;
+    border-radius: 10px;
+    background: #20252d;
+    top: -1px;
+}
+
+QWidget[class="training_params"] QTabWidget::tab-bar {
+    left: 10px;
+}
+
+QWidget[class="training_params"] QTabBar::tab {
+    background: #2a323c;
+    color: #b8c1cc;
+    padding: 6px 14px;
+    border: 1px solid #3a4552;
+    border-bottom: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    min-width: 72px;
+}
+
+QWidget[class="training_params"] QTabBar::tab:selected {
+    background: #262d36;
+    color: #f5f7fb;
+    font-weight: 600;
+}
+
+QWidget[class="training_params"] QTabBar::tab:!selected {
+    margin-top: 4px;
+}
+
+QWidget[class="training_params"] QGroupBox {
+    background-color: #262d36;
+    border: 1px solid #343c46;
+    border-radius: 10px;
+    margin-top: 16px;
+    padding: 10px;
+}
+
+QWidget[class="training_params"] QLineEdit,
+QWidget[class="training_params"] QComboBox,
+QWidget[class="training_params"] QSpinBox,
+QWidget[class="training_params"] QDoubleSpinBox,
+QWidget[class="training_params"] QDateTimeEdit {
+    min-height: 30px;
+    padding: 4px 10px;
+}
+
+QWidget[class="training_params"] QToolButton {
+    min-height: 30px;
+}
+
+QWidget[class="training_params"] QPushButton {
+    min-height: 32px;
+}
+
 QWidget[class="simulation_params"] QLabel[class="stat_label"],
 QWidget[class="training_params"] QLabel[class="result_label"] {
     color: #a8b1bc;
